# luajni

./: .gitmodules  README.md  build.gradle.kts  settings.gradle.kts
annotation/: build.gradle.kts
annotation/src/main/java/top/lizhistudio/annotation/: LuaEnum.kt  LuaEnvironment.kt  LuaField.kt  LuaFunction.kt
annotation_processor/: build.gradle.kts
annotation_processor/src/main/java/top/lizhistudio/annotation/processor/: AnnotationProcessor.kt  ClassCodeGenerator.kt  ClassElementMetaData.kt  ClassMetaData.kt  CommonGenerator.kt  EnumCodeGenerator.kt  EnvironmentGenerator.kt  FunctionContainer.kt  FunctionsCodeGenerator.kt  GenerateUtil.kt  Generator.kt
app/: build.gradle.kts
app/src/androidTest/java/top/lizhistudio/luajni/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
luajni/: build.gradle.kts
luajni/src/androidTest/java/top/lizhistudio/luajni/: ExampleInstrumentedTest.kt  LuaJniTest.kt
luajni/src/main/cpp/: CMakeLists.txt  interpreter.c  luajni.c  luajni.h  mlog.h
luajni/src/main/java/top/lizhistudio/luajni/core/: LuaError.kt  LuaInterpreter.kt
luajni/src/main/java/top/lizhistudio/luajni/test/: CompanionObjectFunction.kt  InsideClass.kt  SimpleEnum.kt  SimpleEnumJava.java  SimpleEnvironment.kt  SimpleFunction.kt  SimpleTest.kt  WrapperTest.kt
luajni/src/test/java/top/lizhistudio/luajni/: ExampleUnitTest.kt
(+4 files in other folders)
